--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId 'com.example.againradio.radio'
-        minSdkVersion 14
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -28,6 +28,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
-    //compile 'com.github.gsotti:EqualizerView:8dce3ef07d'
+    compile 'com.github.gsotti:EqualizerView:8dce3ef07d'
     testCompile 'junit:junit:4.12'
 }
