--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,15 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!--android:theme="@style/AppTheme"-->
     <application xmlns:tools="http://schemas.android.com/tools"
         android:name=".Radio.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/NewTheme"
+
         tools:replace="android:allowBackup">
         <activity
             android:name=".MainActivity"
