--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile 'com.squareup.okhttp3:okhttp:3.7.0'
     testCompile 'junit:junit:4.12'
 }
