--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.1.0'
+    //compile 'com.android.support:appcompat-v4:+'
     compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.github.gsotti:EqualizerView:8dce3ef07d'
+    //compile 'com.github.gsotti:EqualizerView:8dce3ef07d'
     compile 'org.greenrobot:eventbus:3.0.0'
+    //compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile 'com.squareup.okhttp3:okhttp:3.7.0'
     testCompile 'junit:junit:4.12'
+    compile project(path: ':equalizerview')
 }
