--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/testTheme"
-
+        android:resizeableActivity="false"
         tools:replace="android:allowBackup">
 
-        <service
-            android:name=".Radio.RadioService"
-            android:enabled="true"
-            android:exported="true" />
 
         <service
             android:name=".RadioPlayerService"
