--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,29 +8,27 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 
-
-    <!--android:theme="@style/AppTheme"-->
+    <!-- android:theme="@style/AppTheme" -->
     <application xmlns:tools="http://schemas.android.com/tools"
         android:name=".Radio.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:resizeableActivity="false"
         android:supportsRtl="true"
         android:theme="@style/testTheme"
-        android:resizeableActivity="false"
         tools:replace="android:allowBackup">
-
-
         <service
             android:name=".RadioPlayerService"
             android:enabled="true"
             android:exported="true" />
-
-        <service android:name=".MediaPlayerService"
+        <service
+            android:name=".MediaPlayerService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <receiver
             android:name=".Radio.ConnectivityReceiver"
@@ -55,6 +53,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".Genres.GenrePlayerService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
